// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiTableHeaderCellCheckbox is rendered 1`] = `
<th
  aria-label="aria-label"
  class="wuiTableHeaderCellCheckbox testClass1 testClass2"
  data-test-subj="test subject string"
  scope="col"
>
  <div
    class="wuiTableCellContent"
  />
</th>
`;

exports[`WuiTableHeaderCellCheckbox width and style accepts style attribute 1`] = `
<th
  class="wuiTableHeaderCellCheckbox"
  scope="col"
  style="width:20%"
>
  <div
    class="wuiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`WuiTableHeaderCellCheckbox width and style accepts width attribute 1`] = `
<th
  class="wuiTableHeaderCellCheckbox"
  scope="col"
  style="width:10%"
>
  <div
    class="wuiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`WuiTableHeaderCellCheckbox width and style accepts width attribute as number 1`] = `
<th
  class="wuiTableHeaderCellCheckbox"
  scope="col"
  style="width:100px"
>
  <div
    class="wuiTableCellContent"
  >
    Test
  </div>
</th>
`;

exports[`WuiTableHeaderCellCheckbox width and style resolves style and width attribute 1`] = `
<th
  class="wuiTableHeaderCellCheckbox"
  scope="col"
  style="width:10%"
>
  <div
    class="wuiTableCellContent"
  >
    Test
  </div>
</th>
`;
